--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,29 @@
 }
 
 body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1,
+h2,
+h3,
+.navbar {
     font-family: 'Noto Serif', serif;
+}
+
+.navbar {
+  background-color: #521822;
+}
+
+.firstcharacter {
+  color: #903;
+  float: left;
+  font-family: Georgia;
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
 }
 
 img {
